--- a/Pages/Law Notes/Law Notes.css
+++ b/Pages/Law Notes/Law Notes.css
@@ -31,3 +31,15 @@
     list-style-type: none;
     padding-left: 35px;
 }
+
+.trips {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.berne {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
