--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     margin-left: 70rem;
 } */
 
+#lawnotes {
+    margin-left: 25px;
+}
+
 #heading li a{
     color: black;
     /* text-decoration: none; */
@@ -30,4 +34,40 @@
 #heading li {
     list-style-type: none;
     padding-left: 35px;
+}
+.contact-info {
+    font-family: Arial, sans-serif;
+    border: 1px solid #ccc;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.contact-info h2 {
+    color: #333;
+}
+
+.contact-info p {
+    color: #666;
+}
+
+/* Style the contact links */
+.contact-links {
+    margin-top: 20px;
+}
+
+.contact-links a {
+    text-decoration: none;
+    color: #007BFF;
+    margin: 5px;
+}
+
+.contact-links a:hover {
+    text-decoration: underline;
+}
+body {
+    background-image: url('./backdrop.jpeg'); /* Replace 'your-image.jpg' with the actual path to your image file */
+    background-size: cover;
+    background-repeat: no-repeat;
 }
