--- a/Pages/copyright.css
+++ b/Pages/copyright.css
@@ -31,3 +31,14 @@
     list-style-type: none;
     padding-left: 35px;
 }
+.history of copyright {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.history of copyright in india {
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
+}
+
