--- a/Pages/Trademark.css
+++ b/Pages/Trademark.css
@@ -31,3 +31,8 @@
     list-style-type: none;
     padding-left: 35px;
 }
+.Trademark process {
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
+}
