--- a/Pages/Law Notes/Law Notes.css
+++ b/Pages/Law Notes/Law Notes.css
@@ -43,3 +43,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+.Paris Convention{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+    
