--- a/Pages/PIR/PIR.css
+++ b/Pages/PIR/PIR.css
@@ -36,3 +36,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+.tiffany {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
