--- a/Pages/Trademark.css
+++ b/Pages/Trademark.css
@@ -31,7 +31,7 @@
     list-style-type: none;
     padding-left: 35px;
 }
-.Trademark process {
+.Trademark process0 {
     display: block;
     margin-left: auto;
     margin-right:auto;
