--- a/Pages/Patent.css
+++ b/Pages/Patent.css
@@ -31,7 +31,11 @@
     list-style-type: none;
     padding-left: 35px;
 }
-
+.section 3 {
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
+}
 
 
 
