--- a/Pages/Patent.css
+++ b/Pages/Patent.css
@@ -31,7 +31,7 @@
     list-style-type: none;
     padding-left: 35px;
 }
-.Exclusion{
+{
     display: block;
     margin-left: auto;
     margin-right:auto;
