--- a/Pages/Trademark.css
+++ b/Pages/Trademark.css
@@ -36,3 +36,8 @@
     margin-left: auto;
     margin-right:auto;
 }
+.Trademark Indian Carpet{
+    display: block;
+    margin-left: auto;
+    margin-right:auto;
+}
