--- a/Pages/PIR/PIR.css
+++ b/Pages/PIR/PIR.css
@@ -41,3 +41,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+.Mickey Mouse {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
